--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,39 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>SseChat</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+  <head>
+    <title>SseChat</title>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+  </head>
+  <body>
 
-<%= yield %>
+    <body>
+      <div class="navbar navbar-default navbar-static-top">
+        <div class="container">
+          <div class="navbar-header">
+            <%= link_to 'Mini-chat', root_path, class: 'navbar-brand' %>
+          </div>
 
-</body>
+          <% if current_user %>
+            <ul class="nav navbar-nav navbar-right">
+              <li><%= image_tag current_user.avatar_url %></li>
+              <li><%= link_to 'Sign out', sign_out_path %></li>
+            </ul>
+          <% end %>
+        </div>
+      </div>
+
+      <div class="container">
+        <% flash.each do |key, value| %>
+          <div class="alert alert-<%= key %>">
+            <%= value %>
+          </div>
+        <% end %>
+
+        <%= yield %>
+      </div>
+    </body>
+
+  </body>
 </html>
