--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -8,6 +8,7 @@
     <div class="panel-body">
       <ul class="media-list">
         <%= render @comments %>
+        <% if false %><%= render 'templates/comment' %><% end %>
       </ul>
     </div>
   </div>
