--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
       <div class="navbar navbar-default navbar-static-top">
         <div class="container">
           <div class="navbar-header">
-            <%= link_to 'Mini-chat', root_path, class: 'navbar-brand' %>
+            <%= link_to 'thangngoc-chat© 2015', root_path, class: 'navbar-brand' %>
           </div>
 
           <% if current_user %>
