--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -4,6 +4,6 @@
   <div class="media-body">
     <h4 class="media-heading"><%= link_to comment.user.name, comment.user.profile_url, target: '_blank' %> says
       <small class="text-muted">[at <%= comment.timestamp %>]</small></h4>
-    <p><%= comment.body %></p>
+    <p><%= comment.body.gsub(/\r/, '<br/>').html_safe  %></p>
   </div>
 </li>
