--- a/app/views/comments/_welcome.html.erb
+++ b/app/views/comments/_welcome.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <h1>Welcome to our mini-chat!</h1>
+  <h1>Server send event chat app!</h1>
   <p class="lead">Please sign in via facebook</p>
   <%= link_to '', '/auth/facebook', class: 'social facebook' %>
 </div>
