--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,22 +3,24 @@
   <head>
     <title>SseChat</title>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag    'cssemoticons', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'cssemoticons', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
   </head>
   <body>
 
     <body>
-      <div class="navbar navbar-default navbar-static-top">
+      <div class="navbar navbar-default navbar-static-top" style="background: #3B5998">
         <div class="container">
           <div class="navbar-header">
-            <%= link_to 'thangngoc-chat© 2015', root_path, class: 'navbar-brand' %>
+            <%= link_to 'Thangngoc-chat© 2015', root_path, { class: 'navbar-brand', style: 'color: white'} %>
           </div>
 
           <% if current_user %>
             <ul class="nav navbar-nav navbar-right">
               <li><%= image_tag current_user.avatar_url %></li>
-              <li><%= link_to 'Sign out', sign_out_path %></li>
+              <li><%= link_to 'Sign out', sign_out_path, { style: 'color: white'} %></li>
             </ul>
           <% end %>
         </div>
